# cursefetch

./: .gitignore  README.md  RELEASE_SOP.md  pyproject.toml
src/cursefetch/: __init__.py  cursefetch.py  datastruct.py  download.py
