[project]
name = "cursefetch"
version = "0.1.0"
description = "Yet another tool to fetch files from CurseForge."
readme = "README.md"
authors = [
    { name = "Taskeren", email = "r0yalist@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "packaging>=26.0",
    "requests>=2.33.0",
    "tqdm>=4.67.3",
]

[project.scripts]
cursefetch = "cursefetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
