[project]
name = "cursefetch"
version = "0.2.1"
description = "Yet another tool to fetch files from CurseForge."
readme = "README.md"
authors = [
    { name = "Taskeren", email = "r0yalist@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.9.2",
    "packaging>=26.0",
    "requests>=2.33.0",
    "tqdm>=4.67.3",
]

[project.scripts]
cursefetch = "cursefetch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
